<resources>
    <string name="app_name">LibraryDemos</string>
    <string name="main_select_function">选择要进入的功能分类</string>
    <string name="str_image_selector">图片选择</string>
    <string name="str_rx_retrofit">rx+retrofit</string>
    <string name="str_scan_code">识别二维码/条形码</string>
    <string name="image_source_pls">请选择图片来源</string>
    <string name="image_source_camera">拍照</string>
    <string name="image_source_album">从手机相册选取</string>
    <string name="cancel">取消</string>
    <string name="douban">豆瓣</string>
    <string name="github">Github</string>
    <string name="douban_movie">豆瓣电影</string>
    <string name="douban_book">豆瓣图书</string>
    <string name="cover_image">封面图片</string>
    <string name="staff_image">演员头像</string>
    <string name="casts">演员</string>
    <string name="directors">导演</string>
    <string name="summary">简介</string>
    <string name="summary_content">此处应有一大波简介</string>
    <string name="transition_cover">view_share_cover</string>
</resources>
