<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp_12">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/divider_line_gray"
        android:background="@drawable/radius_10_rect_white"
        android:paddingTop="@dimen/dp_5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:text="@string/image_source_pls"
            android:gravity="center"
            android:textSize="@dimen/sp_12"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/btn_source_camera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:text="@string/image_source_camera"
            android:gravity="center"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/black_333333"/>

        <TextView
            android:id="@+id/btn_source_album"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:text="@string/image_source_album"
            android:gravity="center"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/black_333333"/>

    </LinearLayout>

    <TextView
        android:id="@id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/cancel"
        android:gravity="center"
        android:background="@drawable/radius_10_rect"
        app:backgroundTint="#fff"
        tools:backgroundTint="#fff"
        tools:ignore="MissingPrefix"
        android:textColor="@color/black_333333"/>

</LinearLayout>