<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <import type="com.yomii.librarydemos.R"/>
        <variable
            name="movie"
            type="com.yomii.librarydemos.rxretrofit.bean.Movie"/>
        <variable
            name="castManager"
            type="android.support.v7.widget.LinearLayoutManager"/>
        <variable
            name="directorManager"
            type="android.support.v7.widget.LinearLayoutManager"/>
        <variable
            name="castAdapter"
            type="android.support.v7.widget.RecyclerView.Adapter"/>
        <variable
            name="directorAdapter"
            type="android.support.v7.widget.RecyclerView.Adapter"/>
    </data>



    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/guideline_v23"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.23"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="131dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_v46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.46" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_v70"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="397dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dp_12"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="0dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_h35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/cover_image"
            android:transitionName="@string/transition_cover"
            android:layout_marginTop="@dimen/dp_8"
            android:onClick="@{movie::showLargeCoverImage}"
            app:layout_constraintBottom_toTopOf="@id/guideline_v23"
            app:layout_constraintDimensionRatio="5:7"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toLeftOf="@id/guideline_h35"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@{movie.coverUrl}"
            app:placeHolder="@{R.drawable.common_placeholder}"
            tools:src="@drawable/common_placeholder" />

        <TextView
            android:id="@+id/caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/sp_20"
            app:layout_constraintLeft_toLeftOf="@id/guideline_h35"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{movie.title}"
            tools:text="标题" />

        <TextView
            android:id="@+id/original_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_4"
            android:textColor="@color/black_999999"
            android:textSize="@dimen/sp_12"
            app:layout_constraintLeft_toLeftOf="@id/guideline_h35"
            app:layout_constraintTop_toBottomOf="@id/caption"
            android:text="@{movie.original_title}"
            tools:text="原标题" />

        <TextView
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_4"
            android:textColor="@color/black_999999"
            android:textSize="@dimen/sp_12"
            app:layout_constraintLeft_toLeftOf="@id/guideline_h35"
            app:layout_constraintTop_toBottomOf="@id/original_caption"
            android:text="@{movie.tags}"
            tools:text="标签 | 标签2" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_4"
            android:textColor="@color/black_999999"
            android:textSize="@dimen/sp_12"
            app:layout_constraintLeft_toLeftOf="@id/guideline_h35"
            app:layout_constraintTop_toBottomOf="@id/tag"
            android:text="@{movie.year}"
            tools:text="年份" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_4"
            android:numStars="5"
            app:layout_constraintLeft_toLeftOf="@id/guideline_h35"
            app:layout_constraintTop_toBottomOf="@id/year"
            android:rating="@{movie.ratingValue * 5}"
            tools:rating="3.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_4"
            android:textColor="@color/black_999999"
            android:textSize="@dimen/sp_12"
            app:layout_constraintLeft_toRightOf="@id/rating_bar"
            app:layout_constraintTop_toBottomOf="@id/year"
            android:text='@{"评分: " + movie.ratingAverage}'
            tools:text="评分: 7.5" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/casts"
            android:textColor="@color/black_666666"
            android:textSize="@dimen/sp_12"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_v23" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guideline_v46"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:adapter="@{castAdapter}"
            app:layoutManager="@{castManager}"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/directors"
            android:textColor="@color/black_666666"
            android:textSize="@dimen/sp_12"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_v46" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guideline_v70"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:adapter="@{directorAdapter}"
            app:layoutManager="@{directorManager}"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/summary"
            android:textColor="@color/black_666666"
            android:textSize="@dimen/sp_12"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_v70" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_4"
            android:ellipsize="end"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/summary_content"
            android:textColor="@color/black_999999"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3" />


    </android.support.constraint.ConstraintLayout>
</layout>